# Image-Processor---CPU

./: README.md
backend/: CMakeLists.txt  app.py  headers_blur.txt  headers_sobel.txt  test_runner.py
backend/src/: image_processor.cpp  image_processor.hpp  pybind11_bindings.cpp
backend/test_results/: metrics.json
frontend/: README.md  index.html
frontend/src/app/: App.tsx
frontend/src/styles/: theme.css
